2003-03-12  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Added ::tkchat::nickComplete and <Key-Tab> bindings
	to make bash-style command-completion of the nick under the cursor.
	
2003-03-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied patch 627521 from Pascal Scheffers to
	provide a search function using /?regexp to highlight matches, /?
	to skip to the previous match and /! to reset the search state.
	* tkchat.tcl: Added some key bindings to the login dialog. Made
	logging in more robust in the face of server failure.

2003-03-10  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Removed the Refresh button, and narrowed the other
	buttons to leave more room for the entry widget.

2003-03-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied two patched from Pascal Scheffers - one for
	actions from the ircbridge and another to fix the sent message
	history.

2003-03-07  Don Porter  <dgp@users.sf.net>

	* tkchat.tcl: reverted to the previous revision. Last patch broken.
	
2003-03-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Enable default key bindings for logon screen.
	- Better handling of logon failure when the server is down.
	- Indicate HTTP failure by disabling Post button and entry field
	and showing the HTTP error in the entry field.

2003-03-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (checkForRedirection): Handle 307 Temporary Redirect.

2003-02-28  Kevin Kenny  <kennykb@users.sourceforge.net>

	* tkchat.tcl: Added '-force' to a 'namespace import' call
	so that script reloading works again.
	
2003-02-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (::tkchat::Init): Fix mishandling of the http_proxy
	environment variable and support Perl-ish url style value.

2003-02-18  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Applied a fix from Donal K Fellows, that closes a
	huge memleak in the "Users Online" window.
